# 2con

./: .gitignore  Cargo.toml  build.rs  configs.json  settings.json  subscriptions.json  test.slint  xray_config.json
.github/workflows/: release.yml
src/: app_state.rs  config.rs  error.rs  main.rs  proxy.rs  scanner.rs  state.rs  sysproxy.rs  tester.rs
src/core/: config_builder.rs  mod.rs  process.rs  singbox.rs  xray.rs
src/handlers/: connection.rs  mod.rs  proxy_crud.rs  settings.rs  subscription.rs
src/model/: dns.rs  mod.rs  profile.rs  routing.rs  settings.rs  subscription.rs
src/routing/: mod.rs
src/stats/: mod.rs
src/storage/: migrations.rs  mod.rs
src/subscription/: fetch.rs  mod.rs  parser.rs  scheduler.rs
src/system_proxy/: mod.rs
src/ui/: bridge.rs
tests/: e2e_tests.rs
ui/: app.slint  components.slint  main.slint  theme.slint
ui/screens/: about.slint  home.slint  logs.slint  profiles.slint  proxies.slint  settings.slint
