[package]
name = "client_2con"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
rustls = "0.23"
base64 = "0.22"
url = "2.5"
rand = "0.8"

[build-dependencies]
slint-build = "1.9"
