[package]
name = "client_2con"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client_2con"
path = "src/main.rs"
required-features = ["gui"]

[dependencies]
slint = { version = "1.9", features = ["backend-winit"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
rustls = "0.23"
base64 = "0.22"
url = "2.5"
rand = "0.8"
winit = "0.29"
uuid = { version = "1.10", features = ["v4"] }
i-slint-backend-winit = "1.9"
chrono = "0.4.45"
arboard = "3.4"
qrcode-generator = "4.1"
zip = "8.6.0"
[build-dependencies]
slint-build = "1.9"
