[package]
name = "twocon"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
slint = { version = "1.8.0", features = ["compat-1-2"] }

# Async runtime
tokio = { version = "1.38.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_yaml = "0.9.34"

# Network
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "socks"] }
url = "2.5.2"

# Database
rusqlite = { version = "0.31.0", features = ["bundled"] }

# Protobuf/gRPC (Xray Stats)
prost = "0.12.6"
tonic = { version = "0.11.0", default-features = false, features = ["codegen", "prost"] }

# Utilities
base64 = "0.22.1"
urlencoding = "2.1.3"
chrono = { version = "0.4.38", features = ["serde"] }

[build-dependencies]
slint-build = "1.8.0"
